Changed html code

--- a/Nou-e-gyan portal/index.html
+++ b/Nou-e-gyan portal/index.html
@@ -19,7 +19,7 @@
 
         <!-- topbar start -->
         <div id="topbar">
-            <!-- <div id="bar1">
+            <div id="bar1">
                 <div id="bar1__left">
                     <h3><i class="ri-phone-fill"></i>+91 7080102007</h3>
                     <h3><i class="ri-mail-fill"></i>nouegyanhelp@gmail.com</h3>
@@ -27,7 +27,7 @@
                 <div id="bar1__right">
                     <h3>Tue Sep 19 2023 17:57:39 GMT+0530 (India Standard Time)</h3>
                 </div>
-            </div> -->
+            </div>
             <div id="bar2">
                 <h3>For Admission and Examination related query, Kindly call on University helpline Numbers
                     9341508580,9341508577,0612-2201013 & 0612-2206916</h3>
@@ -146,90 +146,13 @@
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                         allowfullscreen></iframe>
                     </div>
-                    <div id="r2">
-                    </div>
+                    <div id="r2"></div>
                 </div>
             </div>
         </div>
         <!-- about div end  -->
 
-        <!-- <section class="services">
-            <div class="container">
-            <div class="row">
-            <div class="section-title">
-            <h2>Features</h2>
-            <p>Student <span>Services</span></p>
-            </div>
-            <div class="col-sm-3">
-            <div class="image1 mx-5 mx-lg-0">
-            <img src="assets/img/services/registration.jpg" class="img-fluid">
-            </div>
-            <div class="text">
-            <h4>Login</h4>
-            </div>
-            </div>
-            <div class="col-sm-3">
-            <div class="image1 mx-5 mx-lg-0">
-            <img src="assets/img/services/dashboard.jpg" class="img-fluid">
-            </div>
-            <div class="text">
-            <h4>Dashboard</h4>
-            </div>
-            </div>
-            <div class="col-sm-3">
-            <div class="image1 mx-5 mx-lg-0">
-            <img src="assets/img/services/online-courses.jpg" class="img-fluid">
-            </div>
-            <div class="text">
-            <h4>Self Learning Material (SLM)</h4>
-            </div>
-            </div>
-            <div class="col-sm-3">
-            <div class="image1 mx-5 mx-lg-0">
-            <img src="assets/img/services/e-lectures.jpg" class="img-fluid ">
-            </div>
-            <div class="text">
-            <h4>e-Books</h4>
-            </div>
-            </div>
-            </div>
-            <div class="row">
-            <div class="col-sm-3">
-            <div class="image1 mx-5 mx-lg-0">
-            <img src="assets/img/services/self-assessment.svg" class="img-fluid p-5">
-            </div>
-            <div class="text">
-            <h4>Self-Assessment Tools</h4>
-            </div>
-            </div>
-            <div class="col-sm-3">
-            <div class="image1 mx-5 mx-lg-0">
-            <img src="assets/img/services/performance.jpg" class="img-fluid pb-2">
-            </div>
-            <div class="text">
-            <h4>Performance</h4>
-            </div>
-            </div>
-            <div class="col-sm-3">
-            <div class="image1 mx-5 mx-lg-0">
-            <img src="assets/img/services/feedback.jpg" class="img-fluid pb-2">
-            </div>
-            <div class="text">
-            <h4>Feedback</h4>
-            </div>
-            </div>
-            <div class="col-sm-3">
-            <div class="image1 mx-5 mx-lg-0">
-            <img src="assets/img/services/course-catlog.jpg" class="img-fluid pb-2">
-            </div>
-            <div class="text">
-            <h4>Courses-Catalogue</h4>
-            </div>
-            </div>
-            </div>
-            </div>
-            </section>   -->
-
+        
         <!-- portal div start  -->
         <div id="portal-div">
             <div id="portal-head">
@@ -522,6 +445,39 @@
           </div>
         </div>
         <!-- courses end -->
+
+        <!-- how to use start-->
+        <div id="usenou">
+            <div class="row">
+                <div class="col-sm-12 mx-5">
+                    <p>HOW TO USE</p>
+                    <h3>NOU e-GYAN PORTAL</h3>
+                </div>
+                <div class="col-sm-6 my-5 px-4">
+                    <iframe class="px-4" width="560" height="315" src="https://www.youtube.com/embed/Sh9VxOBoYbk?si=Co2DiLvQVkX0VM9j" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                </div>
+                <div class="col-sm-6 my-5 px-4">
+                    <iframe class="px-4" width="560" height="315" src="https://www.youtube.com/embed/cEaTY8EfdRs?si=bpIREVKoz7SchIMB" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                </div>
+            </div>
+        </div>
+        <!-- how to use end -->
+
+        <!-- support -->
+        <div class="row" style="background-color: white;">
+            <div class="col-sm-12 mx-5">
+                <p style="color: grey;">HELPDESK</p>
+                <h2 style="color: maroon;">ALWAYS HERE TO SUPPORT YOU !</h2>
+            </div>
+            <div class="col-sm-4 mx-2">
+                <img src="https://nouegyan.in/assets/img/helpline.svg" alt="">
+            </div>
+            <div class="col-sm-7">
+                <p class="py-5" style="font-weight: bold; font-size: larger; justify-content: space-evenly;">The help desk provides user assistance to navigate and understand the aspects of the portal.This also provides a similar interface for maintenance of student information and issues faced.</p>
+                <p  style="font-weight: bold; font-size: larger; justify-content: space-evenly;">+91 7080102007</p>
+            </div>
+        </div>
+        
         <!-- feedback start -->
         <div class="row" style="background-color: black;">
           <div class="col-sm-12 px-5 my-5">
