Updated HTML file

--- a/Spotify Clone/index.html
+++ b/Spotify Clone/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <h1>Welcome to Spotify Clone</h1>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. At eveniet ipsam tenetur aliquam, eaque illo quasi quos nisi esse fuga omnis ab blanditiis quisquam repellat neque, soluta illum facilis atque.</p>
+    <img src="img/logo.png" alt="" srcset="">
 </body>
 </html>
