--- a/Spotify Clone/index.html
+++ b/Spotify Clone/index.html
@@ -3,12 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Spotify-Your favourite music is here</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Welcome to Spotify Clone</h1>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. At eveniet ipsam tenetur aliquam, eaque illo quasi quos nisi esse fuga omnis ab blanditiis quisquam repellat neque, soluta illum facilis atque.</p>
-    <img src="img/logo.png" alt="" srcset="">
+    <nav>
+        <ul>
+            <li class="brand"><img src="img/logo.png" alt="Spotify" srcset=""></li>
+            <li>Home</li>
+            <li>About</li>
+        </ul>
+    </nav>
+    <script src="script.js"></script>
 </body>
 </html>
