--- a/Spotify Clone/index.html
+++ b/Spotify Clone/index.html
@@ -9,11 +9,32 @@
 <body>
     <nav>
         <ul>
-            <li class="brand"><img src="img/logo.png" alt="Spotify" srcset=""></li>
+            <li class="brand"><img src="img/logo.png" alt="Spotify" srcset="">Spotify</li>
             <li>Home</li>
             <li>About</li>
         </ul>
     </nav>
+
+    <div class="container">
+        <div class="songlist">
+            <h1>Best Of NCS - No Copyright Sounds</h1>
+            <div>
+                <div class="songItem"></div>
+            </div>
+        </div>
+        <div class="songbanner"></div>
+    </div>
+
+    <div class="bottom">
+        <input type="range" name="range" id="myProgressBar" min="0" max="100">
+        <div class="icons">
+            <!-- fontawesome icons -->
+            <i class="fa-solid fa-2x fa-forward"></i>
+            <i class="fa-solid fa-2x fa-play"></i>
+            <i class="fa-solid fa-2x fa-backward"></i>
+        </div>
+    </div>
+    <script src="https://kit.fontawesome.com/5413f0ca25.js" crossorigin="anonymous"></script>
     <script src="script.js"></script>
 </body>
 </html>
